<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Przetwarzanie obrazu</string>
    <string name="action_settings">Ustawienia</string>
    <string name="lena">Ustaw obrazek domyślny</string>
    <string name="changeFile">Zmień plik</string>
    <string name="toGray">Konwertuj obraz na skalę szarości</string>
    <string name="testCode">Testuj kod</string>
    <string name="leaveRed">Pozostaw czerwony</string>
    <string name="leaveGreen">Pozostaw zielony</string>
    <string name="leaveBlue">Pozostaw niebieski</string>
    <string name="noRed">Usuń czerwony</string>
    <string name="noGreen">Usuń zielony</string>
    <string name="noBlue">Usuń niebieski</string>
    <string name="addFrame">Dodaj obramowanie</string>
    <string name="connectToCamera">Podłącz kamerę</string>
    <string name="labelUpsideDown">Do góry nogami</string>
    <string name="getEdges">Wykryj krawędzie</string>
    <string name="mirrorLabelX">Odbij obraz według osi X</string>
    <string name="mirrorLabelY">Odbij obraz według osi Y</string>
    <string name="makePhoto">Zrób zdjęcie</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photo_intent">PhotoIntentActivity</string>
    <string name="no_default_photo">Nie załadowano domyślnego obrazka - Lena</string>
    <string name="save_work_label">Zapisz</string>
	<string name="photo_saved">Zdjęcie zostało zapisane do galerii</string>
	<string name="photo_saved_failed">Zdjęcie nie zostało zapisane do galerii</string>
	<string name="edgeDetectionPrevitLabel">Wykrywanie krawędzi - Previtt</string>
	<string name="edgeDetectionSobelLabel">Wykrywanie krawędzi - Sobel</string>
</resources>
